--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@ section{
         font-size: 1.6em;
         font-weight: 300;
         transition: all 0.3s;
+        outline: none;
     }
     .menutoggle{
         position: relative;
@@ -355,7 +356,7 @@ section{
         padding: 20px;
     }
     .banner .content h2{
-        font-size: 3em;
+        font-size: 2.5em;
         color: #fff;
     }
     .row{
