--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -174,6 +174,58 @@ section{
     flex-wrap: wrap;
     margin-top: 40px;
 }
+.experience .content .progress{
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    width: 100%;
+    height: 30px;
+    box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.25);
+    margin: 5px;
+}
+.experience .content .progress .progress-done-coding {
+    background: linear-gradient(90deg, rgba(42,90,255,1) 0%, rgba(0,0,242,1) 50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 70%;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 12px;
+}
+.experience .content .progress .progress-done-webdev {
+    background: linear-gradient(90deg, rgba(42,90,255,1) 0%, rgba(0,0,242,1) 50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 40%;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 12px;
+}
+.experience .content .progress .progress-done-webdes {
+    background: linear-gradient(90deg, rgba(42,90,255,1) 0%, rgba(0,0,242,1) 50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 65%;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 12px;
+}
+.experience .content .progress .progress-done-elect {
+    background: linear-gradient(90deg, rgba(42,90,255,1) 0%, rgba(0,0,242,1) 50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 60%;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 12px;
+}
 .experience .title_text{
     color: #fff;
 }
