--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -22,6 +22,7 @@ p{
     justify-content: center;
     align-items: center;
     background-color: rgb(36, 36, 36);
+    overflow: hidden;
 }
 .banner .content{
     max-width: 900px;
@@ -503,4 +504,33 @@ section{
     .contact .container .img img {
         width: 100%;
     }
+}
+/* #home{
+    box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.25);
+} */
+#experience{
+    box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.25);
+}
+#contact{
+    box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.25);
+}
+.skewedOne{
+    position: absolute;
+    bottom: -100%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    transform: skewY(-15deg);
+    transform-origin: top left;
+}
+.skewedTwo{
+    position: absolute;
+    bottom: -100%;
+    right: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    transform: skewY(15deg);
+    transform-origin: top right;
 }
