--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -21,19 +21,8 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: bg 5s infinite;
+    background-color: rgb(36, 36, 36);
     overflow: hidden;
-}
-@keyframes bg{
-    0%{
-        background-color: rgb(36, 36, 36)
-    }
-    50%{
-        background-color: rgb(0, 0, 0)
-    }
-    100%{
-        background-color: rgb(36, 36, 36)
-    }
 }
 .banner .content{
     max-width: 900px;
